--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,6 @@ header {
   padding-top: 60px;
 }
 
-
 header {
   line-height: 1.5;
 }
@@ -73,10 +72,13 @@ header .profile-image {
   height: 150px;
   border-radius: 50%;
   border: 3px solid white;
-  transition: all .5s;
+  transition: all 0.5s;
 }
 header .profile-image:hover {
-  transform: scale(1.2) rotate(5deg);
+  transform: scale(1.5) rotate(360deg);
+}
+header .CV_image:hover{
+  transform: scale(.5) rotate(360deg);
 }
 .tag {
   background-color: #efefef;
@@ -98,10 +100,10 @@ header .profile-image:hover {
   background: #fff;
   border-bottom: 4px solid #ccc;
   border-radius: 6px;
-  transition: all .5s;
+  transition: all 1s;
 }
 .card:hover {
-  border-color: #ff99ff;
+  border-color: yellow;
 }
 
 ul.skills {
